[gd_scene load_steps=18 format=2]

[ext_resource path="res://juego/recursos/Players/bunny1_walk2.png" type="Texture" id=1]
[ext_resource path="res://juego/Personaje/PersonajePrincipal.gd" type="Script" id=2]
[ext_resource path="res://juego/recursos/Players/bunny1_stand.png" type="Texture" id=3]
[ext_resource path="res://juego/recursos/Players/bunny1_ready.png" type="Texture" id=4]
[ext_resource path="res://juego/recursos/Players/bunny1_walk1.png" type="Texture" id=5]
[ext_resource path="res://juego/recursos/Sfx/Jump 1.wav" type="AudioStream" id=6]
[ext_resource path="res://juego/recursos/Players/bunny1_jump.png" type="Texture" id=7]
[ext_resource path="res://juego/recursos/Items/wing_right.png" type="Texture" id=8]
[ext_resource path="res://juego/recursos/Items/wing_left.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.2388
height = 60.5664

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.3193, 9.9361 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.04419, 1.03315 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 35.0, 15.0, 5.0, -20.0, 0.0, 35.0, 15.0, 5.0, -20.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -35.0, -15.0, -5.0, 20.0, 0.0, -35.0, -15.0, -5.0, 20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PersonajePrincipal" type="KinematicBody2D" groups=[
"Jugador",
]]
z_index = 50
z_as_relative = false
collision_mask = 11
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -27.8904, -0.0385218 )
texture = ExtResource( 9 )
offset = Vector2( -42.5409, -13.8166 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 28.8031, 0.024231 )
texture = ExtResource( 8 )
offset = Vector2( 42.462, -13.8999 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.594604, 25.5012 )
shape = SubResource( 1 )

[node name="CollisionShape2rec" type="CollisionShape2D" parent="."]
position = Vector2( -0.850525, 86.0864 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.179963, -1.00437 )
scale = Vector2( 1.04419, 1.03315 )
frames = SubResource( 3 )
animation = "run"

[node name="audio_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.889
bus = "SFX"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -181.538 )
current = true
zoom = Vector2( 2, 2 )
limit_bottom = 2000
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="EnfriamientoPowerUpSalto" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnfriamientoPowerUpVolar" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aclarar = SubResource( 9 )
anims/default = SubResource( 10 )
anims/entrar_portal = SubResource( 11 )
anims/oscurecer = SubResource( 7 )
anims/volar = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="EnfriamientoPowerUpSalto" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="timeout" from="EnfriamientoPowerUpVolar" to="." method="_on_EnfriamientoPowerUpVolar_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
